jinja2 and django apps

--- a/djangoTutorial/chai/templates/chai/all_chai.html
+++ b/djangoTutorial/chai/templates/chai/all_chai.html
@@ -1,10 +1,9 @@
 {% extends "layout.html" %}
 
 {% block title %}
-About Us
+All Chai
 {% endblock %}
 
 {% block content %}
-<h1>About Us</h1>
-<p>This is the about page of our website.</p>
+<h1>All Chai</h1>
 {% endblock %}
