--- a/djangoTutorial/templates/layout.html
+++ b/djangoTutorial/templates/layout.html
@@ -1,3 +1,4 @@
+{% load static tailwind_tags %} 
 {% load static %}
 
 <!DOCTYPE html>
@@ -13,6 +14,7 @@
 			rel="stylesheet"
 			href="{% static 'style.css' %}"
 		/>
+		{% tailwind_css %}
 	</head>
 	<body>
 		<h1>This is Navbar</h1>
