--- a/djangoTutorial/templates/website/home.html
+++ b/djangoTutorial/templates/website/home.html
@@ -5,5 +5,5 @@ Home
 {% endblock %}
 
 {% block content %}
-<h1>Hello, welcome to Django tutorial!</h1>
+<h1 class='bg-black text-3xl'>Hello, welcome to Django tutorial!</h1>
 {% endblock %}
